# gpu_math

./: Cargo.toml
benches/: benches.rs  matrix_adding_benches.rs  matrix_benches.rs  matrix_dotting_benches.rs  matrix_multing_benches.rs  matrix_special_benches.rs  matrix_subing_benches.rs
benches/matrix_benchmarks/: adding_benchmarks.rs  dotting_benchmarks.rs  mod.rs
src/: errors.rs  lib.rs
src/gpu_utils/: bind_group_macro.rs.old  matrix_pipeline_macros.rs  mod.rs
src/math/: .matrix.rs.old.swp  math_errors.rs  matrix.rs  matrix.rs.old  matrix_pipelines.rs  mod.rs
src/math/shaders/: adding.wgsl  adding_in_place.wgsl  adding_scalar.wgsl  adding_scalar_in_place.wgsl  dotting.metal  dotting.wgsl  exp.wgsl  exp_in_place.wgsl  mult.wgsl  mult_in_place.wgsl  mult_scalar.wgsl  mult_scalar_in_place.wgsl  subing.wgsl  subing_in_place.wgsl  subing_scalar.wgsl  subing_scalar_in_place.wgsl  sum.wgsl  vectored_add.wgsl  vectored_add_in_place.wgsl  vectored_sub.wgsl  vectored_sub_in_place.wgsl
src/math/shaders_old/: add_in_place.wgsl.old  add_scalar_in_place.wgsl.old  adding.wgsl.old  (+15 more)
tests/: matrix_adding_tests.rs  matrix_dotting_tests.rs  matrix_mult_tests.rs  matrix_special_tests.rs  matrix_subing_tests.rs  tests.rs
tests/matrix_tests/: adding_tests.rs  dotting_tests.rs  mod.rs  mult_tests.rs  special_tests.rs  subing_tests.rs
tests/matrix_tests_old/: adding_tests.rs.old  custom_tests.rs.old  dotting_tests.rs.old  exp_tests.rs.old  mod.rs.old  multiplying_tests.rs.old  subtracting_tests.rs.old  sum_tests.rs.old  transpose_tests.rs.old
tests/test_shaders/: relu.wgsl
