[package]
name = "gpu_math"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.22.0"
itertools = "0.14.0"
log = "0.4.27"
pollster = "0.4.0"
rand = "0.9.0"
wgpu = "24.0.3"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "matrix_adding_benches"
harness = false

[[bench]]
name = "matrix_subing_benches"
harness = false

[[bench]]
name = "matrix_multing_benches"
harness = false

[[bench]]
name = "matrix_dotting_benches"
harness = false
